# 2-emergent-gravity

./: .gitignore  AGENTS.md  CITATION.cff  CLAIMS.md  CONVENTIONS.md  DECISION_LOG.md  GATES.md  HANDOFF.md  MIGRATION.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  gate.yml  paper-sync.yml
.github/workflows/: ci.yml
archive/: README.md
derivations/: P2-BETA-01_lattice_mass_scan.md  P2-BETAV-ASSEMBLY-01_bookkeeping_regression.md  P2-BETAV-CAMPAIGN_prereg.md  P2-BETAV-CIRC-01_determinant-decomposition.md  P2-BETAV-RECON-01_cleanroom_reconstruction.md  P2-GAP-01_gap_criticality.md  P2-HK-01_heat_kernel_species.md  P2-NORM-01_normalization_chain.md  P2-SI1-UNBLOCK-01.md  README.md  betav_discriminating_power.md
docs/: BRANCHING_POLICY.md  RESEARCH_WORKFLOW.md  RESULT_SCHEMA.md
paper/: README.md  emergent_gr_paper_v2_15.tex
reports/: 2026-07-20_P2-BETAV-provenance-merge_report.md  2026-07-20_P2-SI1-unblock-merge_report.md  2026-07-20_P2-SI1-unblock_report.md  2026-07-20_betav-complete-recovery_report.md  2026-07-20_betav-decomposition-adjudication_attestation.md  2026-07-20_betav-decomposition-adjudication_report.md  2026-07-20_gravity-engine-recovery_report.md  2026-07-20_recovery-merge_report.md  2026-07-21_batch2-merge_report.md  2026-07-21_betav-campaign-prereg_report.md  2026-07-21_betav-decomp-merge_report.md  2026-07-21_recovery-batch2_report-addendum.md  2026-07-21_recovery-batch2_report.md  2026-07-22_betav-arm-h-decisive_report.md  2026-07-22_betav-arm-h-merge_report.md  2026-07-22_betav-prereg-merge_report.md  2026-07-24_betav-arm-p-decisive_report.md  2026-07-24_betav-arm-p-merge_report.md  REPORTING_POLICY.md
results/: P2-SI1-DEPENDENCY.md  README.md
results/P2-BETA-01/: README.md  commit_parent.txt
results/P2-BETAV-ASSEMBLY-01/: README.md  branch.txt  commit_parent.txt  environment.txt
results/P2-BETAV-CAMPAIGN/: H_comparison.json  P_comparison.json  pilot_comparison.json  pilot_mutation_check.json
results/P2-BETAV-CIRC-01/: PROVENANCE_SEARCH.md  README.md
results/P2-GAP-01/: README.md  commit_parent.txt  environment.txt
results/P2-HK-01/: README.md  branch.txt  commit_parent.txt  environment.txt
results/P2-NORM-01/: README.md  environment.txt
results/comparison/: PAPER_COMPARISON.md
reviews/: README.md
scripts/: README.md  __init__.py  betav_assembly.py  betav_decomp_check.py  betav_decomp_q2.py  betav_discriminating.py  gap_criticality.py  hk_species.py  lattice_beta_scan.py  normalization_chain.py
tests/: README.md  test_betav_campaign_comparator.py  test_betav_campaign_guards.py  test_gate_anchors.py  test_repository_structure.py  test_si1_governance.py
(+48 files in other folders)
